dataset1235/2025-2/2868285114/users/1760111885/executions/3792430146_359761547.log
== SUBMISSION (2025-09-02 23:07:55)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 2):
 print("paga")

else:
 print("nao_paga")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:07:38)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 2)
 print("paga")

else:
 print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:07:35)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 2)
 print("paga")

else:
 print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    if (idade >= 2)
                   ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:07:54)
-- CODE: 
idade = int(input())
print(idade)

if (idade >= 2):
 print("paga")

else:
 print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
